Import partners tex content.

--- a/thesis/bibliography.tex
+++ b/thesis/bibliography.tex
@@ -1,4 +1,55 @@
 \begin{thebibliography}{9}
+\bibitem{isastarbest}
+  Andrew Walker; StackOverflow,
+  \textit{Is A* the best pathfinding algorithm?},
+  \url{https://stackoverflow.com/a/9515734},
+  [Abrufdatum: 28.01.2019]
+\bibitem{wikialgo}
+  Wikipedia,
+  \textit{Algorithmen},
+  \url{https://de.wikipedia.org/wiki/Algorithmus},
+  [Abrufdatum: 28.01.2019]
+\bibitem{wikipath}
+  Wikipedia,
+  \textit{Pathfinding},
+  \url{https://de.wikipedia.org/wiki/Pathfinding},
+  [Abrufdatum: 28.01.2019]
+\bibitem{pfbsc}
+  Andreas Hofmann, Fachhochschule Technikum Wien,
+  \textit{Pathfindingthfinding-Algorithmen in verschiedenen Spielegenres},
+  \url{http://devblog.viking-studios.net/wp-content/uploads/2013/04/Pathfinding-Algorithmen-in-verschiedenen-Spielegenres.pdf},
+  [Abrufdatum: 28.01.2019]
+\bibitem{uniwiengraphen}
+  Franz Embacher, Institut für Theoretische Physik der Universität Wien,
+  \textit{Von Graphen, Genen und dem WWW},
+  \url{https://homepage.univie.ac.at/franz.embacher/Lehre/aussermathAnw/Graphen.html},
+  [Abrufdatum: 27.01.2019]
+\bibitem{graphtheoryconcepts}
+  Sven Oliver Krumke, Hartmut Noltemeier, Stefan Schwarz, Hans-Christoph Wirth,
+  Bayerischen Julius-Maximilians-Universität Würzburg,
+  \textit{Graphentheoretische Konzepte und Algorithmen},
+  \url{http://www.matheraetsel.de/texte/graphentheorie.pdf},
+  Seite 76,
+  [Abrufdatum: 27.01.2019]
+\bibitem{pftwodim}
+  Anders Strand-Holm Vinther, Magnus Strand-Holm Vinther, Aarhus University - Computer Science, Juni 2015,
+  \textit{Pathfinding in Two-dimensional Worlds},
+  \url{http://tildeweb.au.dk/au121/advising/thesis/anders-strand-holm-vinther\_magnus-strand-holm-vinther.pdf},
+  Seite 22,
+  [Abrufdatum: 28.01.2019]
+\bibitem{heuristicsredblob}
+  Amit Patel,
+  \textit{A*'s Use of the Heuristic},
+  \url{http://theory.stanford.edu/~amitp/GameProgramming/Heuristics.html\#manhattan-distance},
+  Abs. \textit{Manhattan distance},
+  2019, 
+  [Abrufdatum: 28.01.2019]
+
+\bibitem{asterngeo}
+  Thorsten Schmidt, David Fuchs, Universität Tübingen,
+  \textit{A-Stern Algorithmus},
+  \url{http://www.geosimulation.de/methoden/a\_stern\_algorithmus.htm},
+  [Abrufdatum: 26.01.2019]
 \bibitem{pfjs}
   Xueqiao Xu et al.,
   \textit{PathFinding.js},
@@ -6,17 +57,17 @@
   Quellcode auf GitHub,
   Letzter Aufruf: \today
 \bibitem{cuishi2011}
-  Xiao, Cui; Hao Shi,
+  Cui Xiao; Shi Hao,
   \textit{A*-based Pathfinding in Modern Computer Games},
   IJCSNS International Journal of Computer Science and Network Security, VOL.11 No.1,
   Januar 2011.
 \bibitem{bma}
-  Fürbringer, Severin; Stoop, Adrian,
+  Severin Fürbringer; Adrian Stoop,
   \textit{BMA Quellcode},
   \url{https://github.com/fuerbringer/bma},
   \today
 \bibitem{bmaonline}
-  Fürbringer, Severin; Stoop, Adrian,
+  Severin Fürbringer; Adrian Stoop,
   \textit{BMA-Webapplikation},
   \url{https://bma.fuerbringer.info},
   \today
