--- a/thesis/bma.tex
+++ b/thesis/bma.tex
@@ -17,6 +17,8 @@
 \usepackage{amsfonts}
 \usepackage{mathptmx}
 \usepackage{wrapfig}
+\usepackage{german,longtable}
+\usepackage{booktabs}
 \usepackage[onehalfspacing]{setspace}
 \usepackage[noend]{algpseudocode}
 \graphicspath{ {./images/} }
@@ -25,6 +27,8 @@
 
 \newcommand{\floor}[1]{\left\lfloor #1 \right\rfloor}
 \newcommand{\ceil}[1]{\left\lceil #1 \right\rceil}
+
+\setlength{\parindent}{0pt}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % END META
@@ -45,6 +49,8 @@
 
 
 \input{introduction}
+
+\input{theory}
 
 \input{realisation}
 
