Create table of doom.

--- a/thesis/bma.tex
+++ b/thesis/bma.tex
@@ -19,6 +19,7 @@
 \usepackage{wrapfig}
 \usepackage{german,longtable}
 \usepackage{booktabs}
+\usepackage{array,paralist}
 \usepackage[onehalfspacing]{setspace}
 \usepackage[noend]{algpseudocode}
 \graphicspath{ {./images/} }
