--- a/thesis/theory.tex
+++ b/thesis/theory.tex
@@ -199,122 +199,225 @@ der Pfad bis zum Start ausgegeben werden.
 Blau ist Startpunkt und Grün Zielpunkt, Diagonale Verbindungen sind
 nicht verfügbar.
 
-\begin{longtable}[]{@{}llll@{}}
+
+
+\begin{table}[H]
+  \begin{center}
+    \begin{tabular}{ c  p{8cm}  p{2cm}   p{2cm} }
+      \toprule
+      Bild & Ausführung & Bekannte Knoten & Untersuchte Knoten \\ 
+      \cmidrule(r){1-1}\cmidrule(lr){2-2}\cmidrule(l){3-3}\cmidrule(l){4-4}
+      \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image1}}
+      & 
+      Schreibt Startpunkt in Bekannte Liste mit Distanz Wert.
+      & 
+      (4/1) d = 4
+      & 
+      --
+      \\ \bottomrule %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image2}}
+      & 
+      Berechne Distanz Wert aller Nachbarn(Rot markiert) und schreibe diese in die bekannte Knoten-Liste. Verweise auf den Vorgängigen Knoten(Schwarzer Balken).Da (4/1) Alle bekannte Nachbarn hat, wird dieser Knoten in die untersuchten Knoten-Liste verschoben. Der Knopf mit den tiefsten d Wert wird Angeschaut und der Prozess wird wiederholt.
+      & 
+      (3/1) d = 3
+      (5/1) d = 5
+      (4/2) d = 5
+      & 
+      (4/1) d = 4
+      \\ \bottomrule %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image3}}
+      & 
+      Da der Graph(3/1) Alle bekannten Nachbarn hat, wird dieser Knoten in der untersuchten Knoten-Liste verschoben.
+      & 
+      (3/0) d = 2
+      (2/1) d = 2
+      (5/1) d = 5
+      (4/2) d = 5
+      & 
+      (3/1) d = 3
+      (4/1) d = 4
+      \\ \bottomrule %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image4}}
+      & 
+      Falls Graph(3/0) vor Graph(2/1) angeschaut wird(gleiche d Werte), wird dieser, da er keine gültigen Nachbarn hat, in die untersuchten Knoten-Liste geschrieben.
+      & 
+      (2/1) d = 2
+      (5/1) d = 5
+      (4/2) d = 5
+      & 
+      (3/0) d = 2
+      (3/1) d = 3
+      (4/1) d = 4
+      \\ \bottomrule %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image5}}
+      & 
+      Der Prozess wird weitergeführt. Die Listen werden kontinuierlich aktualisiert.
+      & 
+      (1/1) d = 1
+      (2/2) d = 2
+      (3/1) d = 3
+      (5/1) d = 5
+      (4/2) d = 5
+      & 
+      (3/0) d = 2
+      (2/1) d = 2
+      (4/1) d = 4
+      \\ \bottomrule %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+      \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image6}}
+      & 
+      Der A-Star hat das Ziel erreicht und muss noch den einzelnen Graphen zurück folgen bis zum Start und kennt somit den Weg.
+      & 
+      (1/0) d = 0
+      (0/1) d = 2
+      (1/2) d = 2
+      (2/2) d = 2
+      (3/1) d = 3
+      (5/1) d = 5
+      (4/2) d = 5
+      & 
+      (1/1) d = 1
+      (3/0) d = 2
+      (2/1) d = 2
+      (4/1) d = 4
+      \\ \bottomrule %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \end{tabular}
+  \end{center}
+\end{table}
+\begin{table}[H]
+  \begin{center}
+    \begin{tabular}{ c  p{8cm}  p{2cm}   p{2cm} }
+      \toprule
+      Bild & Ausführung & Bekannte Knoten & Untersuchte Knoten \\ 
+      \cmidrule(r){1-1}\cmidrule(lr){2-2}\cmidrule(l){3-3}\cmidrule(l){4-4}
+      \raisebox{-\totalheight}{\includegraphics[width=0.20\textwidth]{image7}}
+      & 
+      Die Suche ist Beendet
+      & 
+      --
+      & 
+      --
+      \\ \bottomrule %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+    \end{tabular}
+  \end{center}
+\end{table}
+
+
+%\begin{longtable}[]{@{}llll@{}}
 %\toprule
-\endhead
-\textbf{Bild} & \textbf{Ausführung} & \textbf{bekannte Knoten} &
-\textbf{untersuchte Knoten}\tabularnewline
-\includegraphics[width=2.10417in,height=2.09722in]{image1.png} &
-Schreibt Startpunkt in Bekannte Liste mit Distanz Wert. & (4/1) d = 4 &
--\tabularnewline
-\begin{minipage}[t]{0.22\columnwidth}\raggedright
-\includegraphics[width=2.10417in,height=2.09722in]{image2.png}\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-Berechne Distanz Wert aller Nachbarn(Rot markiert) und schreibe diese in
-die bekannte Knoten-Liste. Verweise auf den Vorgängigen Knoten(Schwarzer
-Balken).Da (4/1) Alle bekannte Nachbarn hat, wird dieser Knoten in die
-untersuchten Knoten-Liste verschoben. Der Knopf mit den tiefsten d Wert
-wird Angeschaut und der Prozess wird wiederholt.\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-(3/1) d = 3
-
-(5/1) d = 5
-
-(4/2) d = 5\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-(4/1) d = 4\strut
-\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.22\columnwidth}\raggedright
-\includegraphics[width=2.10417in,height=2.09722in]{image3.png}\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-Da der Graph(3/1) Alle bekannten Nachbarn hat, wird dieser Knoten in der
-untersuchten Knoten-Liste verschoben.\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-(3/0) d = 2
-
-(2/1) d = 2
-
-(5/1) d = 5
-
-(4/2) d = 5\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-(3/1) d = 3
-
-(4/1) d = 4\strut
-\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.22\columnwidth}\raggedright
-\includegraphics[width=2.10417in,height=2.09722in]{image4.png}\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-Falls Graph(3/0) vor Graph(2/1) angeschaut wird(gleiche d Werte), wird
-dieser, da er keine gültigen Nachbarn hat, in die untersuchten
-Knoten-Liste geschrieben.\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-(2/1) d = 2
-
-(5/1) d = 5
-
-(4/2) d = 5\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-(3/0) d = 2
-
-(3/1) d = 3
-
-(4/1) d = 4\strut
-\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.22\columnwidth}\raggedright
-\includegraphics[width=2.10417in,height=2.09722in]{image5.png}\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-Der Prozess wird weitergeführt. Die Listen werden kontinuierlich
-aktualisiert.\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-(1/1) d = 1
-
-(2/2) d = 2
-
-(3/1) d = 3
-
-(5/1) d = 5
-
-(4/2) d = 5\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-(3/0) d = 2
-
-(2/1) d = 2
-
-(4/1) d = 4\strut
-\end{minipage}\tabularnewline
-\begin{minipage}[t]{0.22\columnwidth}\raggedright
-\includegraphics[width=2.10417in,height=2.09722in]{image6.png}\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-Der A-Star hat das Ziel erreicht und muss noch den einzelnen Graphen
-zurück folgen bis zum Start und kennt somit den Weg.\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-(1/0) d = 0
-
-(0/1) d = 2
-
-(1/2) d = 2
-
-(2/2) d = 2
-
-(3/1) d = 3
-
-(5/1) d = 5
-
-(4/2) d = 5\strut
-\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
-(1/1) d = 1
-
-(3/0) d = 2
-
-(2/1) d = 2
-
-(4/1) d = 4\strut
-\end{minipage}\tabularnewline
-\includegraphics[width=2.10417in,height=2.09722in]{image7.png} &
-Die Suche ist Beendet. & - & -\tabularnewline
-\bottomrule
-\end{longtable}
+%\endhead
+%\textbf{Bild} & \textbf{Ausführung} & \textbf{bekannte Knoten} &
+%\textbf{untersuchte Knoten}\tabularnewline
+%\includegraphics[width=2.10417in,height=2.09722in]{image1.png} &
+%Schreibt Startpunkt in Bekannte Liste mit Distanz Wert. & $(4,1) d = 4$ &
+%-\tabularnewline
+%\begin{minipage}[t]{2.09722in}\raggedright
+%\includegraphics[width=2.10417in,height=2.09722in]{image2.png}\strut
+%\end{minipage} & \begin{minipage}[t]{2.09722in}\raggedright
+%Berechne Distanz Wert aller Nachbarn(Rot markiert) und schreibe diese in
+%die bekannte Knoten-Liste. Verweise auf den Vorgängigen Knoten(Schwarzer
+%Balken).Da (4/1) Alle bekannte Nachbarn hat, wird dieser Knoten in die
+%untersuchten Knoten-Liste verschoben. Der Knopf mit den tiefsten d Wert
+%wird Angeschaut und der Prozess wird wiederholt.\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%(3/1) d = 3
+%
+%(5/1) d = 5
+%
+%(4/2) d = 5\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%(4/1) d = 4\strut
+%\end{minipage}\tabularnewline
+%\begin{minipage}[t]{0.22\columnwidth}\raggedright
+%\includegraphics[width=2.10417in,height=2.09722in]{image3.png}\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%Da der Graph(3/1) Alle bekannten Nachbarn hat, wird dieser Knoten in der
+%untersuchten Knoten-Liste verschoben.\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%(3/0) d = 2
+%
+%(2/1) d = 2
+%
+%(5/1) d = 5
+%
+%(4/2) d = 5\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%(3/1) d = 3
+%
+%(4/1) d = 4\strut
+%\end{minipage}\tabularnewline
+%\begin{minipage}[t]{0.22\columnwidth}\raggedright
+%\includegraphics[width=2.10417in,height=2.09722in]{image4.png}\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%Falls Graph(3/0) vor Graph(2/1) angeschaut wird(gleiche d Werte), wird
+%dieser, da er keine gültigen Nachbarn hat, in die untersuchten
+%Knoten-Liste geschrieben.\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%(2/1) d = 2
+%
+%(5/1) d = 5
+%
+%(4/2) d = 5\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%(3/0) d = 2
+%
+%(3/1) d = 3
+%
+%(4/1) d = 4\strut
+%\end{minipage}\tabularnewline
+%\begin{minipage}[t]{0.22\columnwidth}\raggedright
+%\includegraphics[width=2.10417in,height=2.09722in]{image5.png}\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%Der Prozess wird weitergeführt. Die Listen werden kontinuierlich
+%aktualisiert.\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%(1/1) d = 1
+%
+%(2/2) d = 2
+%
+%(3/1) d = 3
+%
+%(5/1) d = 5
+%
+%(4/2) d = 5\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%(3/0) d = 2
+%
+%(2/1) d = 2
+%
+%(4/1) d = 4\strut
+%\end{minipage}\tabularnewline
+%\begin{minipage}[t]{0.22\columnwidth}\raggedright
+%\includegraphics[width=2.10417in,height=2.09722in]{image6.png}\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%Der A-Star hat das Ziel erreicht und muss noch den einzelnen Graphen
+%zurück folgen bis zum Start und kennt somit den Weg.\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%(1/0) d = 0
+%
+%(0/1) d = 2
+%
+%(1/2) d = 2
+%
+%(2/2) d = 2
+%
+%(3/1) d = 3
+%
+%(5/1) d = 5
+%
+%(4/2) d = 5\strut
+%\end{minipage} & \begin{minipage}[t]{0.22\columnwidth}\raggedright
+%(1/1) d = 1
+%
+%(3/0) d = 2
+%
+%(2/1) d = 2
+%
+%(4/1) d = 4\strut
+%\end{minipage}\tabularnewline
+%\includegraphics[width=2.10417in,height=2.09722in]{image7.png} &
+%Die Suche ist Beendet. & - & -\tabularnewline
+%\bottomrule
+%\end{longtable}
 %
 %\textbf{BestFirstFinder}
 %
