--- a/thesis/bibliography.tex
+++ b/thesis/bibliography.tex
@@ -50,6 +50,13 @@
   \textit{A-Stern Algorithmus},
   \url{http://www.geosimulation.de/methoden/a\_stern\_algorithmus.htm},
   [Abrufdatum: 26.01.2019]
+
+\bibitem{robdevbff}
+  Roblox Corporation, 
+  \textit{Best-First Search},
+  \url{https://developer.roblox.com/articles/Best-first-search\#Pseudo\_Code},
+  5. Juli 2018,
+  [Abrufdatum: 28.01.2019]
 \bibitem{pfjs}
   Xueqiao Xu et al.,
   \textit{PathFinding.js},
