--- a/thesis/titlepage.tex
+++ b/thesis/titlepage.tex
@@ -13,8 +13,8 @@
   \includegraphics[width=0.65\textwidth]{cover2}\par
   \vspace{0.5cm}
   \begin{tabular}[t]{c@{\extracolsep{4em}}c} 
-  \large\textsc{Severin Fürbringer} & \large\textsc{Adrian Stoop} \\ 
-  severin@fsfe.org & adrian-stoop@gmx.ch\\
+  \large\textsc{Adrian Stoop} & \large\textsc{Severin Fürbringer} \\ 
+  adrian-stoop@gmx.ch & severin@fsfe.org\\
   EVT18a & EVT18a
   \end{tabular}
   \vfill
